99-deployments/manifests/opencti/templates/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  tls:
    - hosts:
      - minio-opencti.rtarf-censor.dev-hubs.com
      #secretName: cti-cert
  rules:
    - host: minio-opencti.rtarf-censor.dev-hubs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencti-main-minio-console
                port:
                  number: 9001
